# routes/contacts.js
@@ -2,19 +2,19 @@ const routes = require('express').Router();
 const contactsController = require("../controllers/contacts")
 
 // get request for all the contacts in the database
-routes.get('/', contactsController.getAllContact)
+routes.get('/contacts', contactsController.getAllContact)
 
 // get request for a specific contact
-routes.get('/:id', contactsController.getOneContact)
+routes.get('/contacts/:id', contactsController.getOneContact)
 
 // post request
-routes.post('/', contactsController.createContact)
+routes.post('/contacts', contactsController.createContact)
 
 // put request
-routes.put('/:id', contactsController.updateContact)
+routes.put('/contacts/:id', contactsController.updateContact)
 
 // delete request
-routes.delete('/:id', contactsController.deleteContact)
+routes.delete('/contacts/:id', contactsController.deleteContact)
 
 
 module.exports = routes;
