# server.js
@@ -35,7 +35,7 @@ app
     res.setHeader("Access-Control-Allow-Headers", "Access-Control-Allow-Headers, Origin,Accept, X-Requested-With, Content-Type, Access-Control-Request-Method, Access-Control-Request-Headers");
     next();
   })
-.use('/contacts', contactsRoute)
+.use('/', contactsRoute)
 
 app.listen(port, ()=> {
     console.log(`Listening on port ${port}`)
